ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <length>5</length>
    <type>Text</type>
</CustomField>