ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Asset_Category__c.field-meta.xml
<CustomField>
    <fullName>Asset_Category__c</fullName>
    <label>Asset Category</label>
    <length>2</length>
    <type>Text</type>
</CustomField>