ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Capacity_2__c.field-meta.xml
<CustomField>
    <fullName>Capacity_2__c</fullName>
    <label>Capacity 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>