ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Capacity_Units_2__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Units_2__c</fullName>
    <label>Capacity Units 2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>