ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Emission_Norms__c.field-meta.xml
<CustomField>
    <fullName>Emission_Norms__c</fullName>
    <label>Emission Norms</label>
    <length>15</length>
    <type>Text</type>
</CustomField>