ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Ex_Showroom_Price__c.field-meta.xml
<CustomField>
    <fullName>Ex_Showroom_Price__c</fullName>
    <label>Ex Showroom Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>