ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/External_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Reference_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Reference Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>