ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Fully_Built_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Fully_Built_Vehicle__c</fullName>
    <label>Fully Built Vehicle</label>
    <length>3</length>
    <type>Text</type>
</CustomField>