ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/GST_HSN_CODE__c.field-meta.xml
<CustomField>
    <fullName>GST_HSN_CODE__c</fullName>
    <label>GST HSN CODE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>