ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/IT_Status__c.field-meta.xml
<CustomField>
    <fullName>IT_Status__c</fullName>
    <label>IT Status</label>
    <length>3</length>
    <type>Text</type>
</CustomField>