ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/make__c.field-meta.xml
<CustomField>
    <fullName>make__c</fullName>
    <formula>Parent_Product__r.Parent_Product__r.Make_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>make</label>
    <type>Text</type>
</CustomField>