ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Make_Code__c.field-meta.xml
<CustomField>
    <fullName>Make_Code__c</fullName>
    <label>Make Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>