ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Manufacturer_code__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_code__c</fullName>
    <formula>Parent_Product__r.Manufacturer__r.Manufacturer_code__c</formula>
    <label>Manufacturer_code</label>
    <type>Text</type>
</CustomField>