ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Market_Value_11year__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_11year__c</fullName>
    <label>Market Value 11year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>