ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <formula>Parent_Product__r.Model_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>model</label>
    <type>Text</type>
</CustomField>