ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Model_Code__c.field-meta.xml
<CustomField>
    <fullName>Model_Code__c</fullName>
    <label>Model Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>