ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Model_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Model_Vehicle_Type__c</fullName>
    <formula>IF(ISPICKVAL(Type__c, &apos;Model&apos;),Parent_Product__r.Parent_Product__r.Name, &apos;&apos;)</formula>
    <label>Model Vehicle Type</label>
    <type>Text</type>
</CustomField>