ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Perc_11year__c.field-meta.xml
<CustomField>
    <fullName>Perc_11year__c</fullName>
    <label>Perc 11year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>