ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>IF(ISPICKVAL(Type__c, &apos;Model&apos;),Parent_Product__r.Parent_Product__r.Name, IF(ISPICKVAL(Type__c, &apos;Variant&apos;),Parent_Product__r.Parent_Product__r.Parent_Product__r.Name, IF(ISPICKVAL(Type__c, &apos;Make&apos;),Parent_Product__r.Name, &apos;&apos;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>