ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <formula>Parent_Product__r.Asset_Category__c</formula>
    <label>Sub Category</label>
    <type>Text</type>
</CustomField>