ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Make</fullName>
            </value>
            <value>
                <fullName>Model</fullName>
            </value>
            <value>
                <fullName>Variant</fullName>
            </value>
            <value>
                <fullName>Class Of Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>