ProdIND/ProdPrograms/force-app/main/default/objects/Product2/fields/Variant_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Variant_Vehicle_Type__c</fullName>
    <description>To get Passenger Vehicle or Two Wheeler</description>
    <formula>IF(ISPICKVAL(Type__c, &apos;Variant&apos;),Parent_Product__r.Parent_Product__r.Parent_Product__r.Name, &apos;&apos;)</formula>
    <label>Variant Vehicle Type</label>
    <type>Text</type>
</CustomField>