ProdIND/ProdPrograms/force-app/main/default/objects/Product2/recordTypes/Insurance_Config.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Config</fullName>
    <active>false</active>
    <description>To Store insurance configuration details</description>
    <label>Insurance Config</label>
</RecordType>