ProdIND/ProdPrograms/force-app/main/default/objects/Product2/recordTypes/Make.recordType-meta.xml
<RecordType>
    <fullName>Make</fullName>
    <active>true</active>
    <label>Make</label>
</RecordType>