ProdIND/ProdPrograms/force-app/main/default/objects/Product2/recordTypes/Make_Data.recordType-meta.xml
<RecordType>
    <fullName>Make_Data</fullName>
    <active>true</active>
    <label>Make Data</label>
</RecordType>