ProdIND/ProdPrograms/force-app/main/default/objects/Product2/recordTypes/Model.recordType-meta.xml
<RecordType>
    <fullName>Model</fullName>
    <active>true</active>
    <label>Model</label>
</RecordType>