ProdIND/ProdPrograms/force-app/main/default/objects/Product2/recordTypes/Model_Data.recordType-meta.xml
<RecordType>
    <fullName>Model_Data</fullName>
    <active>true</active>
    <label>Model Data</label>
</RecordType>