ProdIND/ProdPrograms/force-app/main/default/objects/Product2/recordTypes/Product_Config.recordType-meta.xml
<RecordType>
    <fullName>Product_Config</fullName>
    <active>true</active>
    <description>To Store Make model Information of the product being configured.</description>
    <label>Product Config</label>
</RecordType>