ProdIND/ProdPrograms/force-app/main/default/objects/Product2/recordTypes/Schemes.recordType-meta.xml
<RecordType>
    <fullName>Schemes</fullName>
    <active>false</active>
    <description>To handle scheme information for configuration</description>
    <label>Schemes</label>
</RecordType>