ProdIND/ProdPrograms/force-app/main/default/objects/Product2/recordTypes/Type_Of_Product.recordType-meta.xml
<RecordType>
    <fullName>Type_Of_Product</fullName>
    <active>true</active>
    <label>Type Of Product</label>
</RecordType>