ProdIND/ProdPrograms/force-app/main/default/objects/Product2/recordTypes/Variant.recordType-meta.xml
<RecordType>
    <fullName>Variant</fullName>
    <active>true</active>
    <label>Variant</label>
</RecordType>