ProdIND/ProdPrograms/force-app/main/default/objects/Product2/recordTypes/Variant_Data.recordType-meta.xml
<RecordType>
    <fullName>Variant_Data</fullName>
    <active>true</active>
    <label>Variant Data</label>
</RecordType>