ProdIND/ProdPrograms/force-app/main/default/objects/Product2/validationRules/Validate_Make_Code_For_Maker_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Make_Code_For_Maker_Record</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Type__c, &apos;Make&apos;), ISNULL(Make_Code__c) )</errorConditionFormula>
    <errorMessage>Make Code is required for the selected Product Type</errorMessage>
</ValidationRule>