ProdIND/ProdPrograms/force-app/main/default/objects/Product2/validationRules/Validate_Variant_Code_For_Variant_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Variant_Code_For_Variant_Record</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Type__c, &apos;Variant&apos;), ISNULL(Variant_Code__c) )</errorConditionFormula>
    <errorMessage>Variant Code is required for the selected Product Type</errorMessage>
</ValidationRule>