ProdIND/ProdPrograms/force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>Make_Code__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>Type__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Product_Type__c</columns>
    <columns>Variant_Vehicle_Type__c</columns>
    <columns>Variant_Code__c</columns>
    <columns>Parent_Product__c</columns>
    <columns>Asset_Category__c</columns>
    <columns>Model_Code__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Make_Code__c</field>
        <operation>equals</operation>
        <value>MAHINDRA</value>
    </filters>
    <label>All Products</label>
</ListView>