ProdIND/ProdPrograms/force-app/main/default/objects/Product2/listViews/Make_Details_List.listView-meta.xml
<ListView>
    <fullName>Make_Details_List</fullName>
    <columns>Make_Code__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Parent_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Make</value>
    </filters>
    <label>Make Details List</label>
</ListView>