ProdIND/ProdPrograms/force-app/main/default/objects/Product2/listViews/Make_Type.listView-meta.xml
<ListView>
    <fullName>Make_Type</fullName>
    <columns>Make_Code__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Parent_Product__c</columns>
    <columns>Type__c</columns>
    <columns>Active__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Make</value>
    </filters>
    <filters>
        <field>Make_Code__c</field>
        <operation>equals</operation>
        <value>MAHINDRATR</value>
    </filters>
    <label>Make Type</label>
</ListView>