ProdIND/ProdPrograms/force-app/main/default/objects/Product2/listViews/Model_Details.listView-meta.xml
<ListView>
    <fullName>Model_Details</fullName>
    <columns>Model_Code__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Parent_Product__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Asset_Category__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Segment__c</columns>
    <columns>Active__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Model</value>
    </filters>
    <label>Model Details</label>
</ListView>