ProdIND/ProdPrograms/force-app/main/default/objects/Product2/listViews/Vehicle_Type_View.listView-meta.xml
<ListView>
    <fullName>Vehicle_Type_View</fullName>
    <columns>External_Reference_Id__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>Two Wheeler</value>
    </filters>
    <label>Vehicle Type View</label>
</ListView>